bioler plate and some text on index

--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
 
     <main>
         <h1>Welcome to My Portfolio and Blog</h1>
-        
+        <h2>What am i doing on this website</h2>
+        <p>The whole reason for this website is that I was watching Youtube and saw someone talking about why they made a personal website in 2025 and it was someone thatopend my 
+            eye. Even though I can't fine the video now the person talk about them being move over or starting a new job working with NEXT JS and they didn't have expresens with it 
+            so they made a website that they talk about when it comes to learning something new it almost always better to do to learn.</n>
+            Also they talk about it was a fun way to make something you haven't seen and have it just how you like it, as the website is only going to be seen by people that know 
+            me and hopefully future employer as well.
+        </p>
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2025 Your Name</p>
     </footer>
 </body>
 </html>
