--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,11 @@
     </header>
 
     <main>
-        <h1>Welcome to My Portfolio and Blog</h1>
+        <h1>Welcome to My Contact page</h1>
+        <p>For anyone that would like to talk about some of the thing that I have put on my blog or for any potentule employer</p>
+        <a href="skean2000@outlook.com">My email</a>
+        <a href="https://github.com/SKeana">My github</a>
+        
         
     </main>
 
