added some text to project

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,11 @@
     </header>
 
     <main>
-        <h1>Welcome to My Portfolio and Blog</h1>
+        <h1>Welcome to all of my projects</h1>
+        <p>
+            At this moment all of my finish project will be here and as of now all of them will have links to the git up but I will have some infomation on the project,
+            such as why I made this project and what I found hard.
+        </p>
         
     </main>
 
