--- a/projects.html
+++ b/projects.html
@@ -25,11 +25,23 @@
             At this moment all of my finish project will be here and as of now all of them will have links to the git up but I will have some infomation on the project,
             such as why I made this project and what I found hard.
         </p>
-        
+        <h2>Personal Finance tracker</h2>
+        <p>
+
+        </p>
+        <h2>Task management</h2>
+        <p>
+
+        </p>
+        <h2>Recipe sharing</h2>
+        <p>
+            
+        </p>
+
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2025 Shaun Kean</p>
     </footer>
 </body>
 </html>
