finish adding project

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Home</title>
+    <title>Shaun Kean -Projects </title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -26,16 +26,24 @@
             such as why I made this project and what I found hard.
         </p>
         <h2>Personal Finance tracker</h2>
+        <a href="https://github.com/SKeana/personal-finance-tracker">Github link</a>
         <p>
-
+            This personal finace tracker was one of the first project that I did after finishing my codecademy course, being that I found that this was harder than other project
+            that i did in my codecademy course and i struggle with knowing the skill that I needed for a project and trying out different libary to have it look the way I wanted.
         </p>
         <h2>Task management</h2>
+        <a href="https://github.com/SKeana/task-management-application">Github link</a>
         <p>
-
+            After finishing off my last project I wanted a project that had more interaction with the page and trying to think of the ways that having a website move with the 
+            movment of the user mouse when they are picking up part of a project that they are planning out was the first idea that I had, saying that this project really 
+            taught me how to really think about part of a project as at first I didn't really think deeply on what are all of the action are, this was one of the first problem 
+            that I had as it made me really think what was I trying to do and go though all of the steps needed.
         </p>
         <h2>Recipe sharing</h2>
+        <a href="https://github.com/SKeana/recipe-share">Github link</a>
         <p>
-            
+            This project was not as hard as the other project, the only reason for this was that is that most of the code that was needed was for other project that were done
+            only needing some minor changes.
         </p>
 
     </main>
