--- a/about.html
+++ b/about.html
@@ -20,12 +20,25 @@
     </header>
 
     <main>
-        <h1>Welcome to My Portfolio and Blog</h1>
+        <h1>Welcome to about me</h1>
+        <h2>Why and how did I get into coding</h2>
+        <p>
+            When I started thinking about what I wanted to I really thought about all of the diffenent job and what make a job something that someone want to work at for yera 
+            and really become great at it, for myself I've always look at people that make things and wish I could do the same.
+            The first time trying to code anything was when i was playing World of Warcraft as there are addon that alow you to make small iconse that tell you this that is 
+            happing but the is only a small amount of code you need to write in Lua and that was the first time trying to code as I wanted to get better at playing World of 
+            Warcraft and Lua help me do that.
+        </p>
+        <h2>What are some of my passion out side of coding</h2>
+        <p>
+            Some of my passion is learning of any type that is why I made my blog as it would be a place for me to talk about some of the new things that I have learning, this
+            can be from book that I read or project that I've done and working on.
+        </p>
         
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Shaun Kean</p>
     </footer>
 </body>
 </html>
