--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2025 Shaun Kean</p>   
     </footer>
 </body>
 </html>
